@@ -25,6 +25,7 @@
 - Add dry run to ProtoInterface::retrieve_messages function
 - Change json include
 - Update Message Lister to function with longer metadata
+- Update main.cpp & Interactive.h to enable compilation on Linux Hosts
 ** [0.0.5] - 2020-03-15
 *** Added
 - Add protobuff test directorypop3.proto to src
